--- a/app/src/main/res/layout/bottom_main.xml
+++ b/app/src/main/res/layout/bottom_main.xml
@@ -9,7 +9,9 @@
         android:layout_weight="1"
         android:background="@color/yellow"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/button_1"
+        >
 
         <TextView
             android:layout_width="wrap_content"
@@ -23,6 +25,8 @@
         android:layout_weight="1"
         android:background="@color/aqua"
         android:gravity="center"
+        android:id="@+id/button_2"
+
         android:orientation="horizontal">
 
         <TextView
@@ -37,6 +41,8 @@
         android:layout_weight="1"
         android:background="@color/coral"
         android:gravity="center"
+        android:id="@+id/button_scan"
+
         android:orientation="horizontal">
 
         <TextView
@@ -51,6 +57,8 @@
         android:layout_weight="1"
         android:background="@color/colorPrimaryDark"
         android:gravity="center"
+        android:id="@+id/button_3"
+
         android:orientation="horizontal">
 
         <TextView
@@ -65,6 +73,8 @@
         android:layout_weight="1"
         android:background="@color/darkgray"
         android:gravity="center"
+        android:id="@+id/button_4"
+
         android:orientation="horizontal">
 
         <TextView
