--- a/app/src/main/res/layout/view_main_1.xml
+++ b/app/src/main/res/layout/view_main_1.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <com.jude.easyrecyclerview.EasyRecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/recyclerView_main_1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_empty="@layout/view_empty"
