--- a/app/src/main/res/layout/fragment_main_2.xml
+++ b/app/src/main/res/layout/fragment_main_2.xml
@@ -2,13 +2,61 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:orientation="vertical"
+    android:clipChildren="false"
     >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This is a fragment 2"
-        />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:clipChildren="false"
+
+            >
+            <LinearLayout android:layout_width="match_parent"
+                android:layout_height="15dp"
+                android:orientation="horizontal"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="这里应该有hint"
+                    />
+
+            </LinearLayout>
+            <android.support.v4.view.ViewPager
+                android:id="@+id/rv_news_top_image"
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <com.example.overl.kefu.views.ViewPagerForScrollView
+                    android:id="@+id/news_viewpager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:flipInterval="30"
+                    android:persistentDrawingCache="animation"
+                    android:visibility="visible">
+
+                </com.example.overl.kefu.views.ViewPagerForScrollView>
+            </RelativeLayout>
+        </LinearLayout>
+
+
+    </ScrollView>
 
 </LinearLayout>
