--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,20 +6,21 @@
     android:orientation="vertical"
     tools:context="com.example.overl.kefu.MainActivity">
 
-    <include layout="@layout/top_main" />
+    <include layout="@layout/top_main"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:id="@+id/fragment_main"
+        android:orientation="vertical"
+
         >
 
     </LinearLayout>
 
     <include
         layout="@layout/bottom_main"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
          />
 
 
