--- a/app/src/main/res/layout/top_main.xml
+++ b/app/src/main/res/layout/top_main.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="50dp"
     android:orientation="horizontal"
-    android:background="@color/antiquewhite"
+    android:background="@color/white"
     android:gravity="center"
+    android:elevation="2dp"
     >
     <TextView
+        android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/kefu"
+        android:textSize="20sp"
+        android:textColor="@color/black"
         />
 
 </LinearLayout>
