--- a/app/src/main/res/layout/bottom_main.xml
+++ b/app/src/main/res/layout/bottom_main.xml
@@ -62,15 +62,24 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@color/coral"
+        android:background="@color/white"
         android:gravity="center"
 
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
+        <ImageView
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_marginTop="6dp"
+            android:src="@drawable/tab_ic_nor_3"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/buttom_3" />
+            android:text="@string/buttom_3"
+            android:textSize="10sp"
+            android:textColor="@color/black"
+            />
     </LinearLayout>
 
     <LinearLayout
