--- a/app/src/main/res/layout/fragment_main_3.xml
+++ b/app/src/main/res/layout/fragment_main_3.xml
@@ -31,16 +31,16 @@
                 />
 
             <LinearLayout
-                android:elevation="2dp"
+                android:elevation="1dp"
                 android:id="@+id/tag_host_main_1"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
-                android:background="@color/white"
+                android:background="@drawable/corners_bg"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:gravity="center"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
                 >
                 <LinearLayout
 
