--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -5,7 +5,8 @@
     android:layout_height="80dp"
     android:gravity="center"
     android:foreground="?android:attr/selectableItemBackground"
-    android:background="@android:color/white">
+    android:elevation="2dp"
+    android:background="@drawable/corners_bg">
     <ImageView
         android:id="@+id/video_cover"
         android:layout_width="48dp"
